--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,15 +49,15 @@
         app:layout_constraintHorizontal_bias = "0.5"
         />
 
-    <!-- Testing Button #1 -->
-    <Button android:id="@+id/buttonTester1"
+    <!-- Testing Button #2: Emergency Stop Motors -->
+    <Button android:id="@+id/buttonTester2"
         android:layout_width  = "wrap_content"
         android:layout_height = "wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
 
-        android:text="@string/test_button1"
+        android:text="@string/test_button2"
         android:textAppearance = "@style/TextProfileBar"
-        android:background     = "@color/buddy_dark"
+        android:background     = "@color/design_default_color_error"
 
         android:textSize          = "16sp"
         android:paddingHorizontal = "20dp"
@@ -69,32 +69,17 @@
         app:layout_constraintHorizontal_bias = "0.5"
         />
 
-    <!-- Testing Button #3 -->
-    <Button android:id="@+id/buttonTester3"
+    <!--
+    ====================================================================
+     Test Buttons Block #2
+    ==================================================================== -->
+    <!-- Testing Button #1: Test Yes Nod -->
+    <Button android:id="@+id/buttonTester1"
         android:layout_width  = "wrap_content"
         android:layout_height = "wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
 
-        android:text="@string/test_button3"
-        android:textAppearance = "@style/TextProfileBar"
-        android:background     = "@color/buddy_dark"
-
-        android:textSize          = "16sp"
-        android:paddingHorizontal = "15dp"
-        android:alpha             = "0.8"
-
-        app:layout_constraintTop_toBottomOf  = "@id/buttonTester2"
-        app:layout_constraintStart_toStartOf = "@id/buttonTester4"
-        app:layout_constraintEnd_toEndOf     = "parent"
-        app:layout_constraintHorizontal_bias = "0.85"
-        />
-    <!-- Testing Button #4 -->
-    <Button android:id="@+id/buttonTester4"
-        android:layout_width  = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:layout_marginTop="20dp"
-
-        android:text="@string/test_button4"
+        android:text="@string/test_button1"
         android:textAppearance = "@style/TextProfileBar"
         android:background     = "@color/buddy_dark"
 
@@ -108,26 +93,70 @@
         app:layout_constraintHorizontal_bias = "0.15"
         />
 
-
-    <!-- Testing Button #2 -->
-    <Button android:id="@+id/buttonTester2"
+    <!-- Testing Button #3: Reset Head X/Y -->
+    <Button android:id="@+id/buttonTester3"
         android:layout_width  = "wrap_content"
         android:layout_height = "wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
 
-        android:text="@string/test_button2"
+        android:text="@string/test_button3"
         android:textAppearance = "@style/TextProfileBar"
-        android:background     = "@color/design_default_color_error"
+        android:background     = "@color/buddy_dark"
 
         android:textSize          = "16sp"
-        android:paddingHorizontal = "20dp"
+        android:paddingHorizontal = "15dp"
+        android:alpha             = "0.8"
+
+        app:layout_constraintTop_toBottomOf  = "@id/buttonTester2"
+        app:layout_constraintStart_toStartOf = "@id/buttonTester1"
+        app:layout_constraintEnd_toEndOf     = "parent"
+        app:layout_constraintHorizontal_bias = "0.85"
+        />
+
+    <!--
+    ====================================================================
+     Test Buttons Block #3
+    ==================================================================== -->
+    <!-- Testing Button #4 -->
+    <Button android:id="@+id/buttonTester4"
+        android:layout_width  = "wrap_content"
+        android:layout_height = "wrap_content"
+        android:layout_marginTop="10dp"
+
+        android:text="@string/test_button4"
+        android:textAppearance = "@style/TextProfileBar"
+        android:background     = "@color/buddy_dark"
+
+        android:textSize          = "16sp"
+        android:paddingHorizontal = "15dp"
         android:alpha             = "0.8"
 
         app:layout_constraintTop_toBottomOf  = "@id/buttonTester1"
         app:layout_constraintStart_toStartOf = "parent"
-        app:layout_constraintEnd_toEndOf     = "parent"
-        app:layout_constraintHorizontal_bias = "0.5"
+        app:layout_constraintEnd_toEndOf     = "@id/buttonTester5"
+        app:layout_constraintHorizontal_bias = "0.15"
         />
+
+    <!-- Testing Button #3 -->
+    <Button android:id="@+id/buttonTester5"
+        android:layout_width  = "wrap_content"
+        android:layout_height = "wrap_content"
+        android:layout_marginTop="10dp"
+
+        android:text="@string/test_button5"
+        android:textAppearance = "@style/TextProfileBar"
+        android:background     = "@color/buddy_dark"
+
+        android:textSize          = "16sp"
+        android:paddingHorizontal = "15dp"
+        android:alpha             = "0.8"
+
+        app:layout_constraintTop_toBottomOf  = "@id/buttonTester1"
+        app:layout_constraintStart_toStartOf = "@id/buttonTester4"
+        app:layout_constraintEnd_toEndOf     = "parent"
+        app:layout_constraintHorizontal_bias = "0.85"
+        />
+
 
     <TextView android:id="@+id/testView1"
         android:layout_width  = "match_parent"
