--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
         android:textSize         = "16sp"
         android:paddingHorizontal= "20dp"
-        android:alpha            = "0.8"
+        android:alpha            = "0.3"
 
         app:layout_constraintTop_toBottomOf  = "@id/textUserInfo"
         app:layout_constraintStart_toStartOf = "parent"
@@ -58,6 +58,7 @@
         android:text="@string/test_button2"
         android:textAppearance = "@style/TextProfileBar"
         android:background     = "@color/design_default_color_error"
+        android:visibility="gone"
 
         android:textSize          = "16sp"
         android:paddingHorizontal = "20dp"
@@ -126,6 +127,7 @@
         android:text="@string/test_button4"
         android:textAppearance = "@style/TextProfileBar"
         android:background     = "@color/buddy_dark"
+        android:visibility="gone"
 
         android:textSize          = "16sp"
         android:paddingHorizontal = "15dp"
@@ -146,6 +148,7 @@
         android:text="@string/test_button5"
         android:textAppearance = "@style/TextProfileBar"
         android:background     = "@color/buddy_dark"
+        android:visibility="gone"
 
         android:textSize          = "16sp"
         android:paddingHorizontal = "15dp"
@@ -168,6 +171,7 @@
         android:text           = ""
         android:textAppearance = "@style/TextWhiteShadow"
         android:background     = "@color/design_default_color_error"
+        android:visibility="gone"
 
         android:textSize   = "18sp"
         android:padding    = "6dp"
@@ -194,6 +198,7 @@
         android:text           = "@string/user_messages"
         android:textAppearance = "@style/TextWhiteShadow"
         android:background     = "@drawable/bubble_user"
+        android:visibility="gone"
 
         android:textSize   = "18sp"
         android:padding    = "6dp"
