--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
         android:textSize         = "16sp"
         android:paddingHorizontal= "20dp"
-        android:alpha            = "0.3"
+        android:alpha            = "0.1"
 
         app:layout_constraintTop_toBottomOf  = "@id/textUserInfo"
         app:layout_constraintStart_toStartOf = "parent"
@@ -83,6 +83,7 @@
         android:text="@string/test_button1"
         android:textAppearance = "@style/TextProfileBar"
         android:background     = "@color/buddy_dark"
+        android:visibility="gone"
 
         android:textSize          = "16sp"
         android:paddingHorizontal = "15dp"
@@ -103,6 +104,7 @@
         android:text="@string/test_button3"
         android:textAppearance = "@style/TextProfileBar"
         android:background     = "@color/buddy_dark"
+        android:visibility="gone"
 
         android:textSize          = "16sp"
         android:paddingHorizontal = "15dp"
